--- a/docs/NSI/Premiere/C03/JS01.md
+++ b/docs/NSI/Premiere/C03/JS01.md
@@ -9,7 +9,7 @@
 
 A chaque fois qu'une page fait plus que simplement afficher du texte et des images - un contenu *statique*, copmme par exemple affiocher des animations, des cartes interactives, des menus déroulants, etc, il y a de bonnes chances pour que ce soit un script `JavaScript` qui en soit la raison.
 
-Comme souvent, un tutoriel complet sur Javascript est disponible sur (MDN Web Docs](https://developer.mozilla.org/fr/docs/Learn/JavaScript/First_steps/What_is_JavaScript){target=_blank}. Vous y trouverez de nombreuses explications absentes de ce cours.
+Comme souvent, un tutoriel complet sur Javascript est disponible sur [MDN Web Docs](https://developer.mozilla.org/fr/docs/Learn/JavaScript/First_steps/What_is_JavaScript){target=_blank}. Vous y trouverez de nombreuses explications absentes de ce cours.
 
 
 ### Une première approche : modifier le texte d'un paragraphe par un click.
@@ -20,13 +20,13 @@ Comme souvent, un tutoriel complet sur Javascript est disponible sur (MDN Web Do
 	
 	<p align="center">
 	
-	<iframe src="//video.toutatice.fr/video_priv/12970/fd9462474a58b36c03c0d879b49335902aa126082f0b910f8d9b8221a0c22d06/?is_iframe=true&size=480" width="854" height="480" style="padding: 0; margin: 0; border:0" allowfullscreen ></iframe>
+	<iframe src="//video.toutatice.fr/video_priv/12970/fd9462474a58b36c03c0d879b49335902aa126082f0b910f8d9b8221a0c22d06/?is_iframe=true&size=720" width="1280" height="720" style="padding: 0; margin: 0; border:0" allowfullscreen ></iframe>
 	
 	</p^>
 	
 Observons les codes de la page web (corrigé pour la position de la  balise `<script>`[^Balise]) :
 
-[^Balise]: une vidéo détaillant pourquoi la balise `<script>` doit être placée dans la balise `<body>` est disponible [ici](https://video.toutatice.fr/video_priv/13098/e62034962f0bd50e7ee52d1173dbb52921167fda1f084ab609f00cb6f162fa35/).
+[^Balise]: une vidéo détaillant pourquoi la balise `<script>` doit être placée dans la balise `<body>` est disponible [ici](https://video.toutatice.fr/video_priv/13098/e62034962f0bd50e7ee52d1173dbb52921167fda1f084ab609f00cb6f162fa35/){target=_blank}.
 
 
 <div style = "display : flex;">
@@ -82,4 +82,186 @@ Ainsi que l'arbre du DOM correspondant :
 
 ![DOM TREE](JS01_DOM.png){ : style="width:100vw;max-height : 80vh;"}
 
-Lors de la construction de la page web, lors de la lecture
+La construction d l'arbre du DOM se fait au fur et à mesure de la lecture du fichier `.html`, et est présentée sur le schéma ci-dessus de gauche à droite. La balise `<script>` étant la dernière balise présente dans `<body>`, ell est lue en dernier.
+
+L'exécution du code `JS` est donc la suivante :
+
+* Création d'une variable `texte` qui référence la première balise `<p>` trouvée dans le DOM (surlignage <span style="background-color : yellow;color:#2e303e;"> jaune </span>).
+* Ajout à l'élément `<p>` sélectionné d'un écouteur d'évènement qui attends une action clique-gauche (flèche <span style="color : red;"> rouge </span>).
+* Fin de la lecture du code, avec création d'une référence vers une fonction `changeNom`, qui n'est pas exécutée.
+
+Une fois la construction du DOM terminée, le gestionnaire d'évènement général du navigateur écoute toutes les actions de l'utilisateur (mouvement souris, clique gauche ou clique droit, appuis sur le clavier, voire écoute micro si celui-ci a été activé....)
+
+Un *clique-droit* sur l'élément `<p>` déclenche l'exécution de la fonction `changeNom` (flèche <span style="color : lightblue;"> bleue </span>, qui elle même va modifier l'attribut `textContent` de l'élément `<p>` (flèche <span style="color : lightgreen;"> verte </span>).
+
+
+## Bases de Javascript
+
+### Séparer le code
+
+Pour conserver la cohérence de HTML5, on a séparé le code HTML, définissant la nature des élements de la page, du CSS, qui définit la forme que prendront ces éléments. 
+
+Il faudra **faire de même** avec le code `javascript`, en le séparant du code `html` en renseigant dans la balise `<script>` l'attribut `src` avec l'adresse (absolue ou relative) du fichier contenant le code javascript. Ainsi si le fichier javascript s'appelle `mon_fichier.js` et est dans le même dossier que le fichier `html`, il suffira d'écrire la balise suivante :
+
+```` HTML
+<script src="mon_fichier.js"> </script>
+````
+Un fichier javascript est donc simplement un fichier d'extension `.js` contenant du code javascript.
+
+L'exemple précédent peut donc être classé en trois fichiers :
+
+<div style = "display : flex;">
+<div style = "display:inline;width:30%;text-align:left;">
+<p align="center">
+
+ Fichier `pagesimple.html`
+ 
+</p>
+
+```` HTML
+<!DOCTYPE html>
+
+<html lang="fr"> 
+    <head>
+        <meta charset="utf-8" />
+		<title>Un exemple de l'utilité de JS </title>
+		<link href="style.css" rel="stylesheet" type="text/css" />
+    </head>
+
+    <body>		
+		<p>Bonjour Inconnu !</p>		
+		<script src="code.js"></script>
+	</body>	
+</html>
+````
+
+</div>
+<div style = "display:inline;width:30%;text-align:left;padding-left: 10px;">
+<p align="center">
+
+ Fichier `style.css`
+ 
+</p>
+
+```` CSS
+p{
+	text-align: center;
+	border: 2px solid rgba(0,0,200,0.6);
+	background: rgba(0,0,200,0.3);
+	color: rgba(0,0,200,0.6);
+	box-shadow: 1px 1px 2px rgba(0,0,200,0.4);
+	border-radius: 10px;
+	padding: 3px 10px;
+	cursor:pointer;
+}
+
+
+````
+
+
+</div>
+<div style = "display:inline;width:30%;text-align:left;padding-left: 10px;">
+<p align="center">
+
+ Fichier `code.js`
+ 
+</p>
+
+```` javascript
+let texte = document.querySelector('p');
+texte.addEventListener('click', changeNom);
+
+function changeNom(){
+	let name = prompt("Entrez votre nom :");
+	texte.textContent = "Bonjour "+name+" !";
+}
+````
+
+</div>
+</div>
+
+## Utilisation de l'inspecteur d'objet
+
+L'inspecteur d'objet permet d'avoir accès à une console javascript, fort utile pour aider au déboggage de code.
+
+Celle-ci est disponible une fois l'inspecteur d'objet ouvert :
+
+![Console JS](inspecteurObjetConsole.png){: style="width :100vw;"}
+
+!!! question "prise en main de la console `js` "
+
+	1. Ouvrez la console javascript de votre navigateur, sur une page au choix.
+	2. Tapez le code suivant :
+		```` javascript
+		>>> function plop(){
+			console.log("Plop !");
+			}
+		````
+	3. Exécutez la fonction `plop` :
+	
+		```` javascript
+		>>> plop();
+		````
+		Que se passe-t-il ?
+	4. Tapez maintenant le code suivant :
+		```` javascript
+		>>> let cible = document.querySelector("h1");
+		>>> cible.addEventListener('click', plop);			
+		````
+	5. Cherchez la première balise `<h1>` de la page et cliquez sur cet élément. Que se passe-t-il ?
+	6. Tapez le code suivant :
+		```` javascript
+		>>> cible.addEventListener('mouseover', plop);
+		````
+		Comment faire pour déclencher l'écriture dans la console à partir de cet événement ?
+		
+!!! tips " Utilisation de `console.log()`"
+	Il est parfois difficile de voir comment s'exécute un code javscript. L'utilisation de `console.log(message);` dans votre code, avec comme message une chaîne de caractère explicative, est parfois un bon moyen de vérifier qu'un bloc de code est exécuté par javascript.
+
+### Déclaration des variables
+
+Javascript est un langage faiblement typé. Cela signifie que lorsqu'on déclare une variable, il n'est pas nécessaire de déclarer son type. Il suffit de déclarer son **nom**, en ajoutant devant les mots-clés `let` ou `var` selon la situation[^LetVar]. On peut aussi **déclarer et initialiser** une variable dans le même temps :
+
+[^LetVar]: La question de l'utilisation de `let` ou `var` dépasse largement le cadre de ce cours. On trouvera [ici](https://developer.mozilla.org/fr/docs/Web/JavaScript/Reference/Statements/let){target=_blank} un début d'explication. 
+
+````javascript
+let x ; // x est déclarée, mais pas initialisée
+let y = 10; // y est déclarée et initialisée à la valeur 10
+
+var z ="toto";  // z est déclarée et initialisée avec la chaîne "toto"
+````
+Sachez seulement que :
+
+* `let` défini des variables dont la {==**portée**==} (=l'ensemble des lignes où la variable est connue et utilisable) est celle du `bloc` ;
+* `var` défini des variables dont la portée est celle de la fonction.
+
+Pour ceux intéressés les exemples ci-dessous sont parlants :
+
+??? example "Exemples de portées[^LetVar]"
+	```` javascript
+		function varTest() {
+		var x = 31;
+		if (true) {
+		var x = 71;  // c'est la même variable (même fonction)!
+		console.log(x);  // 71
+		}
+		console.log(x);  // 71
+		}
+
+		function letTest() {
+		let x = 31;
+		if (true) {
+		let x = 71;  // c'est une variable différente (changement de bloc)
+		console.log(x);  // 71
+		}
+		console.log(x);  // 31
+		}
+
+	````
+
+### Structures conditionnelles
+
+### Boucles bornées
+
+### Boucles non-bornées
+
