MAJ Tle + build

--- a/docs/NSI/Premiere/C03/JS01.md
+++ b/docs/NSI/Premiere/C03/JS01.md
@@ -232,8 +232,8 @@ var z ="toto";  // z est déclarée et initialisée avec la chaîne "toto"
 ````
 Sachez seulement que :
 
-* `let` défini des variables dont la {==**portée**==} (=l'ensemble des lignes où la variable est connue et utilisable) est celle du `bloc` ;
-* `var` défini des variables dont la portée est celle de la fonction.
+* `let` définit des variables dont la {==**portée**==} (=l'ensemble des lignes où la variable est connue et utilisable) est celle du `bloc` ;
+* `var` définit des variables dont la portée est celle de la fonction.
 
 Pour ceux intéressés les exemples ci-dessous sont parlants :
 
