--- a/docs/NSI/Premiere/C03/JS01.md
+++ b/docs/NSI/Premiere/C03/JS01.md
@@ -258,8 +258,39 @@ Pour ceux intéressés les exemples ci-dessous sont parlants :
 		}
 
 	````
+	
+### Opérations arithmétiques
+
+Les opérations arithmétiques de base sont les même qu'en Python : $+$, $-$, $\times$ et $\div$ sont représentées par 
+`+`, `-`, `*` et `/`.
+
+Ainsi le calcul $3 + \dfrac{4}{2-7}$ est effectué par :
+
+```` javascript
+>> 3 + 4/(2-7)
+2.2
+````
+
+Les opérations de divisions euclidiennes et de reste(modulo) sont utilisables comme en Python, ainsi que les exposants :
+
+```` javascript
+>> 22%5
+2
+>> 22//5
+4
+>> 5**3
+125
+````
+
+
+Les fonctions mathématiques 
+	
+### Fonctions 
+
 
 ### Structures conditionnelles
+
+La structure conditionnelle de base est
 
 ### Boucles bornées
 
