--- a/docs/NSI/Premiere/C03/JS01.md
+++ b/docs/NSI/Premiere/C03/JS01.md
@@ -238,6 +238,8 @@ Sachez seulement que :
 Pour ceux intéressés les exemples ci-dessous sont parlants :
 
 ??? example "Exemples de portées[^LetVar]"
+
+	les deux codes suivant expliquent en partie la différence entre `let` et `var`
 	```` javascript
 		function varTest() {
 		var x = 31;
@@ -258,6 +260,9 @@ Pour ceux intéressés les exemples ci-dessous sont parlants :
 		}
 
 	````
+	
+	Une exécution pas-à-pas est possible grâce au site [pythontutor.com](https://pythontutor.com/javascript.html#code=function%20varTest%28%29%20%7B%0A%20%20%20%20%20%20%20%20var%20x%20%3D%2031%3B%0A%20%20%20%20%20%20%20%20if%20%28true%29%20%7B%0A%20%20%20%20%20%20%20%20var%20x%20%3D%2071%3B%20%20//%20c'est%20la%20m%C3%AAme%20variable%20%28m%C3%AAme%20fonction%29!%0A%20%20%20%20%20%20%20%20console.log%28x%29%3B%20%20//%2071%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20console.log%28x%29%3B%20%20//%2071%0A%20%20%20%20%20%20%20%20%7D%0A%0Afunction%20letTest%28%29%20%7B%0A%20%20%20%20%20%20%20%20let%20x%20%3D%2031%3B%0A%20%20%20%20%20%20%20%20if%20%28true%29%20%7B%0A%20%20%20%20%20%20%20%20let%20x%20%3D%2071%3B%20%20//%20c'est%20une%20variable%20diff%C3%A9rente%20%28changement%20de%20bloc%29%0A%20%20%20%20%20%20%20%20console.log%28x%29%3B%20%20//%2071%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20console.log%28x%29%3B%20%20//%2031%0A%20%20%20%20%20%20%20%20%7D%0A%20%20%20%20%20%20%20%20%0AvarTest%28%29%3B%0A%0AletTest%28%29%3B&curInstr=14&heapPrimitives=nevernest&mode=display&origin=opt-frontend.js&py=js&rawInputLstJSON=%5B%5D){target=_blank}.
+	
 	
 ### Opérations arithmétiques
 
@@ -283,9 +288,37 @@ Les opérations de divisions euclidiennes et de reste(modulo) sont utilisables c
 ````
 
 
-Les fonctions mathématiques 
+Les fonctions mathématiques plus complexes ( $\sqrt{~~}$, $sin$, $cos$...) peuvent être utlisées en les **préfixant** par `Math.`
+
+```` javascript
+>> Math.sqrt(25)
+5
+>> Math.cos(45)
+0.5253219888177297
+````
 	
 ### Fonctions 
+
+Une {==**fonction**==} en javascript est introduite par le mot-clé `function`, suivie du nom de la fonction, de parenthèses contenant ou non des **arguments**. Le bloc de code de la fonction est délimité par une {==**paire d'accolades**==} ouvrantes et fermantes.
+
+Une valeur de retour est possible en utilisant le mot clé `return`.
+
+!!! example "Exemples"
+	Fonction calculant le discriminant d'un polynôme de degré 2
+	
+	```` javascript
+	function discriminant(a,b,c){
+		return b**2-4*a*c;
+	}		
+	````	
+	Fonction renvoyant `true` si les deux vecteurs $\vec{u}\left(\begin{array}{c}x1\\y1\end{array}\right)$ et  $\vec{v}\left(\begin{array}{c}x2\\y2\end{array}\right)$ sont colinéaires, et `false` sinon
+	
+	```` javascript
+	function colineaires(x1, y1, x2, y2){
+		det = x1*y2-x2*y1;
+		return det==0;		
+	}		
+	````	
 
 
 ### Structures conditionnelles
