--- a/docs/NSI/Premiere/C03/JS01.md
+++ b/docs/NSI/Premiere/C03/JS01.md
@@ -114,7 +114,7 @@ L'exemple précédent peut donc être classé en trois fichiers :
 <div style = "display:inline;width:30%;text-align:left;">
 <p align="center">
 
- Fichier `pagesimple.html`
+Fichier `pagesimple.html`
  
 </p>
 
@@ -139,7 +139,7 @@ L'exemple précédent peut donc être classé en trois fichiers :
 <div style = "display:inline;width:30%;text-align:left;padding-left: 10px;">
 <p align="center">
 
- Fichier `style.css`
+Fichier `style.css`
  
 </p>
 
@@ -163,7 +163,7 @@ p{
 <div style = "display:inline;width:30%;text-align:left;padding-left: 10px;">
 <p align="center">
 
- Fichier `code.js`
+Fichier `code.js`
  
 </p>
 
@@ -323,9 +323,81 @@ Une valeur de retour est possible en utilisant le mot clé `return`.
 
 ### Structures conditionnelles
 
-La structure conditionnelle de base est
+La structure conditionnelle de base est obtenue grâce au code suivant :
+
+```` javascript
+if ( booleen ){
+	// Bloc Si
+}
+else {
+	// Bloc Sinon
+}
+````
+
+!!! info "Remarques"
+	
+	* la condition booléenne doit être entre parenthèses. L'interpréteur javascript signalera une erreur dans le cas contraire :
+
+		![JS01_if1.png](JS01_if1.png){: style="width:30vw;"}
+		
+		
+	* il n'y a pas comme en Python de clause `elif`. Si on veut tester plusieurs sous conditions, il faudra **imbriquer** les structures conditionnelles. Voici une comparaison entre python et javascript : 	
+	
+		<div style="display:flex;">
+		<div style="display:inline;width:45%;margin-right:20px;">
+		
+		```` python
+		if condition 1 :
+			# bloc condition 1
+		elif condition 2 :
+			# bloc condition 2
+		else :
+			# bloc sinon	
+		````
+			
+		</div>
+		<div style="display:inline;width:50%;">
+		
+		```` javascript
+		if (condition 1){
+			// bloc condition 1
+		}
+		else {
+			if (condition 2) {
+				// bloc condition 2
+			} 
+			else {
+					// bloc sinon
+			}
+		}
+				
+		
+		````
+		
+		</div>
+		</div>
+		
+		L'imbrication est tout de suite plus compliquée... Il faut être **rigoureux**, et particulièrement être attentif à bien **fermer les accolades dès qu'on en a ouvert une**.
+	* Pour les cas avec trop d'imbrications, il est parfois nécessaire de se servir plutôt de l'instruction `switch` pour laquelle la [documentation](https://developer.mozilla.org/fr/docs/Web/JavaScript/Reference/Statements/switch) est très bien faite.
 
 ### Boucles bornées
+
+Une boucle bornée en javascript s'écrit de la manière suivante :
+
+```` javascript
+for (let i=0; i<10; i=i+1){
+	// bloc d'instructions à répéter
+}
+````
+
+* on commence par créer une variable sur laquelle on va *itérer* : `var i=0;`
+* on indique une condition de continuité de l'action : `i<10;` (tant que `i` est inférieur à `10`, on effectue le bloc d'instruction de la boucle)
+* on indique comment varie la variable à chaque tour de boucle  : `i=i+1` (à chaque tour, la variable `i` est incrémentée de 1$.
+
+Il faut noter que la variable `i` n'existe plus une fois la boucle terminée, vu qu'n a utilisé `let` :
+
+<iframe width="800" height="500" frameborder="0" src="https://pythontutor.com/iframe-embed.html#code=for%20%28let%20i%3D0%3B%20i%3C5%3B%20i%3Di%2B1%29%7B%0A%20%20console.log%28i%29%3B%0A%7D%0Alet%20k%20%3D%203*i%3B&codeDivHeight=400&codeDivWidth=350&cumulative=false&curInstr=0&heapPrimitives=nevernest&origin=opt-frontend.js&py=js&rawInputLstJSON=%5B%5D&textReferences=false"> </iframe>
+
 
 ### Boucles non-bornées
 
