--- a/docs/NSI/Premiere/C03/JS01.md
+++ b/docs/NSI/Premiere/C03/JS01.md
@@ -180,7 +180,7 @@ function changeNom(){
 </div>
 </div>
 
-## Utilisation de l'inspecteur d'objet
+### Utilisation de l'inspecteur d'objet
 
 L'inspecteur d'objet permet d'avoir accès à une console javascript, fort utile pour aider au déboggage de code.
 
@@ -217,6 +217,8 @@ Celle-ci est disponible une fois l'inspecteur d'objet ouvert :
 		
 !!! tips " Utilisation de `console.log()`"
 	Il est parfois difficile de voir comment s'exécute un code javscript. L'utilisation de `console.log(message);` dans votre code, avec comme message une chaîne de caractère explicative, est parfois un bon moyen de vérifier qu'un bloc de code est exécuté par javascript.
+
+## Programmer en javascript : les bases
 
 ### Déclaration des variables
 
@@ -290,13 +292,44 @@ Les opérations de divisions euclidiennes et de reste(modulo) sont utilisables c
 
 Les fonctions mathématiques plus complexes ( $\sqrt{~~}$, $sin$, $cos$...) peuvent être utlisées en les **préfixant** par `Math.`
 
-```` javascript
+``` javascript
 >> Math.sqrt(25)
 5
 >> Math.cos(45)
 0.5253219888177297
-````
+```
+
+### Les  chaînes de caractères
+
+Le type primitif chaîne de caractère en javascript est repéré comme en python par un encadrement par des guillemets simples `'`, doubles `"` ou même des accents graves `` ` ``.
+
+Ce type primitif est converti automatiquement en objets `String` dès qu'on fait appel aux méthodes des objets `String`. Ainsi si `ma_chaine` est une chaine de caractère :
+
+* `ma_chaine.length` donne la longueur de la chaîne de caractères ;
+* `ma_chaine.toLowerCase()` renvoie la chaîne de caractères en minuscules ( on a de même `.toUpperCase()`)
+* `ma_chaine[i]` renvoie le caractère d'indice `i` (toujours en partant de zéro !)
+* ...
+
+La totalité des méthodes liées aux objets `String` sont décrits dans [cette page](https://developer.mozilla.org/fr/docs/Web/JavaScript/Reference/Global_Objects/String#m%C3%A9thodes_des_instances).
+
+!!! warning "Javascript et le transtypage"
+
+	En Python, une instruction telle que `"Bonjour numéro "+6` ne fonctionne pas. On reçoit une erreur `TypeError: can only concatenate str (not "int") to str`, ce qui signifie qu'il est impossible de concaténer un type `str` avec autre chose.
+	Contrairement à Python, en javascript il n'est pas nécessaire de **transtyper** une variable pour qu'elle soit intégrée à une opération avec d'autre types de variables. L'instruction `"Bonjour numéro "+6` renvoie la chaîne de caractères `"Bonjour numéro 6"`[^Prisonnier].
 	
+	C'est très pratique, mais attention ! Certaines erreurs peuvent très vite être commise ! Un petit exemple de comportement de Javascript est donné dans l'exemple ci-dessous :
+	
+	<iframe width="800" height="370" frameborder="0" src="https://pythontutor.com/iframe-embed.html#code=let%20a%20%3D%20'5'%20-%203%3B%0Alet%20b%20%3D%20'5'%20%2B%203%3B%0Alet%20c%20%3D%20'5'-%20'4'%3B%0Alet%20d%20%3D%20'5'%20%2B%20%2B'5'%3B%0Alet%20e%20%3D%20'toto'%20%2B%20%2B%20'tata'%3B%0Alet%20f%20%3D%20'5'%20%2B%20-%20'2'%3B%0A%0Alet%20x%20%3D%203%0Alet%20y%20%3D%20'5'%20%2B%20x%20-%20x%3B%0Alet%20z%20%3D%20'5'%20-%20x%20%2B%20x%3B%0A&codeDivHeight=400&codeDivWidth=350&curInstr=0&heapPrimitives=nevernest&origin=opt-frontend.js&py=js&rawInputLstJSON=%5B%5D"> </iframe>
+	
+	
+	
+[^Prisonnier]: [https://fr.wikipedia.org/wiki/Le_Prisonnier#Synopsis](https://fr.wikipedia.org/wiki/Le_Prisonnier#Synopsis)
+
+
+	
+	
+
+
 ### Fonctions 
 
 Une {==**fonction**==} en javascript est introduite par le mot-clé `function`, suivie du nom de la fonction, de parenthèses contenant ou non des **arguments**. Le bloc de code de la fonction est délimité par une {==**paire d'accolades**==} ouvrantes et fermantes.
@@ -385,6 +418,13 @@ else {
 Une boucle bornée en javascript s'écrit de la manière suivante :
 
 ```` javascript
+for (initialisation; conditions de continuité; incrémentation){
+	// bloc d'instructions à répéter
+}
+````
+Plus simplement, pour répéter 10 fois un bloc d'instructions, on peut utiliser la structure suivante :
+
+```` javascript
 for (let i=0; i<10; i=i+1){
 	// bloc d'instructions à répéter
 }
@@ -396,8 +436,77 @@ for (let i=0; i<10; i=i+1){
 
 Il faut noter que la variable `i` n'existe plus une fois la boucle terminée, vu qu'n a utilisé `let` :
 
-<iframe width="800" height="500" frameborder="0" src="https://pythontutor.com/iframe-embed.html#code=for%20%28let%20i%3D0%3B%20i%3C5%3B%20i%3Di%2B1%29%7B%0A%20%20console.log%28i%29%3B%0A%7D%0Alet%20k%20%3D%203*i%3B&codeDivHeight=400&codeDivWidth=350&cumulative=false&curInstr=0&heapPrimitives=nevernest&origin=opt-frontend.js&py=js&rawInputLstJSON=%5B%5D&textReferences=false"> </iframe>
+<iframe width="800" height="300" frameborder="0" src="https://pythontutor.com/iframe-embed.html#code=for%20%28let%20i%3D0%3B%20i%3C5%3B%20i%3Di%2B1%29%7B%0A%20%20console.log%28i%29%3B%0A%7D%0Alet%20k%20%3D%203*i%3B&codeDivHeight=400&codeDivWidth=350&cumulative=false&curInstr=0&heapPrimitives=nevernest&origin=opt-frontend.js&py=js&rawInputLstJSON=%5B%5D&textReferences=false"> </iframe>
 
 
 ### Boucles non-bornées
 
+Une boucle non-bornée est obtenue en javascript par l'instruction suivante :
+
+```` javascript
+while (booleen) {
+   // bloc d'instruction
+  }
+````
+
+Un exemple d'utilisation avec les chaines de caractères est disponible ici :
+
+<iframe width="800" height="300" frameborder="0" src="https://pythontutor.com/iframe-embed.html#code=let%20mot%20%3D%20%22toto%22%3B%0Awhile%20%28mot.length%3C50%29%20%7B%0A%20%20mot%20%2B%3D%20mot%3B%0A%7D&codeDivHeight=400&codeDivWidth=350&curInstr=0&heapPrimitives=nevernest&origin=opt-frontend.js&py=js&rawInputLstJSON=%5B%5D"> </iframe>
+
+## Exercices
+
+!!! question "Exercice 1"
+
+	=== "Enoncé"
+		Ecrivez une fonction nommée `isTooLong` qui :
+
+		* prend une chaîne de caractères comme argument;
+		* renvoie vrai si la longueur de la chaîne dépasse 10 caractères;
+		* renvoie faux dans les autres cas.
+	
+	=== "Solution"
+		A venir
+		
+!!! question "Exercice 2"
+
+	=== "Enoncé"
+		Créez une fonction nommée `aprec` qui :
+
+		* prend une note sur 20 en argument ;
+		* renvoie `"Hideux"` si la note est entre 0 et 7 exclus ;
+		* renvoie `"Moche"` si la note entre 7 et 10 exclus ;
+		* renvoie `"Nice"` si la note entre 10 et 15 exclus ;
+		* renvoie `"GG"` si la note entre 15 et 20 inclus ;
+		* renvoie `"BUG"` si la note n'est pas correcte.
+	
+	=== "Solution"
+		A venir
+		
+!!! question "Exercice 3"
+
+	=== "Enoncé"
+		Écrivez une fonction `max3` qui renvoie le plus grand nombre parmi trois entiers passés en argument.
+	
+	=== "Solution"
+		A venir
+		
+!!! question "Exercice 4"
+
+	=== "Enoncé"
+		Créer une fonction affichant les 10 premiers multiples de 7.
+		
+	=== "Solution"
+		A venir
+		
+!!! question "Exercice 5"
+	=== "Enoncé"
+		Créer une fonction `puissance2(v)` qui renvoie grâce à une boucle non-bornée l'entier `n` tel que :
+		
+		$$
+		2^n \leqslant v < 2^{n+1}
+		$$
+		
+		On supposera que `v` est bien un entier positif.
+
+	=== "Solution"
+	A venir
