--- a/docs/NSI/Premiere/C03/JS01.md
+++ b/docs/NSI/Premiere/C03/JS01.md
@@ -193,25 +193,25 @@ Celle-ci est disponible une fois l'inspecteur d'objet ouvert :
 	1. Ouvrez la console javascript de votre navigateur, sur une page au choix.
 	2. Tapez le code suivant :
 		```` javascript
-		>>> function plop(){
+		function plop(){
 			console.log("Plop !");
 			}
 		````
 	3. Exécutez la fonction `plop` :
 	
 		```` javascript
-		>>> plop();
+		plop();
 		````
 		Que se passe-t-il ?
 	4. Tapez maintenant le code suivant :
 		```` javascript
-		>>> let cible = document.querySelector("h1");
-		>>> cible.addEventListener('click', plop);			
+		let cible = document.querySelector("h1");
+		cible.addEventListener('click', plop);			
 		````
 	5. Cherchez la première balise `<h1>` de la page et cliquez sur cet élément. Que se passe-t-il ?
 	6. Tapez le code suivant :
 		```` javascript
-		>>> cible.addEventListener('mouseover', plop);
+		cible.addEventListener('mouseover', plop);
 		````
 		Comment faire pour déclencher l'écriture dans la console à partir de cet événement ?
 		
