MAJ + correction + build JS01

--- a/docs/NSI/Premiere/C03/JS01.md
+++ b/docs/NSI/Premiere/C03/JS01.md
@@ -412,6 +412,15 @@ else {
 		
 		L'imbrication est tout de suite plus compliquée... Il faut être **rigoureux**, et particulièrement être attentif à bien **fermer les accolades dès qu'on en a ouvert une**.
 	* Pour les cas avec trop d'imbrications, il est parfois nécessaire de se servir plutôt de l'instruction `switch` pour laquelle la [documentation](https://developer.mozilla.org/fr/docs/Web/JavaScript/Reference/Statements/switch) est très bien faite.
+	
+!!! warning "ET et OU en javascript"
+	
+	Attention ! En javascript les mots-clés `AND` et `OR` n'existent pas :
+	
+	* pour obtenir `ET` on utilise `&&` ;
+	* pour obtenir `OU` on utilise `||` ;
+	
+	Une condition  $\in [0;10]$ s'exprimera alors sous la forme `(a>=0) && (a=<10)`.
 
 ### Boucles bornées
 
@@ -465,7 +474,15 @@ Un exemple d'utilisation avec les chaines de caractères est disponible ici :
 		* renvoie faux dans les autres cas.
 	
 	=== "Solution"
-		A venir
+		```` javascript
+		function isTooLong(mot){
+			if (mot.length>10){
+				return true;
+			}else{
+				return false;
+			}
+		}
+		````
 		
 !!! question "Exercice 2"
 
@@ -480,7 +497,22 @@ Un exemple d'utilisation avec les chaines de caractères est disponible ici :
 		* renvoie `"BUG"` si la note n'est pas correcte.
 	
 	=== "Solution"
-		A venir
+		```` javascript
+		function aprec(note){
+			if ((note>=0) && (note< 7)){
+				return "Hideux;			
+			} else if ((note>=7) && (note< 10)){
+				return "Moche";
+			} else if ((note>=10) && (note< 15)){
+				return "Nice";
+			} else if ((note>=15) && (note<= 20)){
+				return "GG";
+			} else {
+			return "BUG";
+			}
+			
+		}
+		````
 		
 !!! question "Exercice 3"
 
