Correction JS01 + build

--- a/docs/NSI/Premiere/C03/JS01.md
+++ b/docs/NSI/Premiere/C03/JS01.md
@@ -278,16 +278,23 @@ Ainsi le calcul $3 + \dfrac{4}{2-7}$ est effectué par :
 2.2
 ````
 
-Les opérations de divisions euclidiennes et de reste(modulo) sont utilisables comme en Python, ainsi que les exposants :
+Les opérations de modulo et d'exposants sont utilisables comme en Python :
 
 ```` javascript
 >> 22%5
 2
->> 22//5
-4
 >> 5**3
 125
 ````
+
+!!! warning "Quotient de la division euclidienne"
+
+	Il n'est pas possible comme en Python d'utiliser l'opérateur `//` pour obtenir le quotient de la division euclidienne de deux entiers. Il faut donc utiliser une fonction spécifique du module `Math` pour l'obtenir :
+	
+	```` javascript
+	>>> Math.floor(24/5)
+	4
+	````
 
 
 Les fonctions mathématiques plus complexes ( $\sqrt{~~}$, $sin$, $cos$...) peuvent être utlisées en les **préfixant** par `Math.`
@@ -508,7 +515,7 @@ Un exemple d'utilisation avec les chaines de caractères est disponible ici :
 			} else if ((note>=15) && (note<= 20)){
 				return "GG";
 			} else {
-			return "BUG";
+				return "BUG";
 			}
 			
 		}
@@ -520,7 +527,17 @@ Un exemple d'utilisation avec les chaines de caractères est disponible ici :
 		Écrivez une fonction `max3` qui renvoie le plus grand nombre parmi trois entiers passés en argument.
 	
 	=== "Solution"
-		A venir
+		```` javascript
+		function max3(n1, n2, n3){
+			if ((n1>=n2) && (n1>=n3)){
+				return n1
+			} else if ((n2>=n1) && (n3>=n1)){
+				return n2
+			} else {
+				return n3
+			}
+		}
+		````
 		
 !!! question "Exercice 4"
 
@@ -528,7 +545,13 @@ Un exemple d'utilisation avec les chaines de caractères est disponible ici :
 		Créer une fonction affichant les 10 premiers multiples de 7.
 		
 	=== "Solution"
-		A venir
+		```` javascript
+		function multiple7(){
+			for (let i=0; i<10; i=i+1){
+				console.log("7x"+i+" = "+(7*i));
+			}
+		}
+		````
 		
 !!! question "Exercice 5"
 	=== "Enoncé"
@@ -541,4 +564,13 @@ Un exemple d'utilisation avec les chaines de caractères est disponible ici :
 		On supposera que `v` est bien un entier positif.
 
 	=== "Solution"
-	A venir
+		```` javascript
+		function puissance2(v){
+			let p =0;
+			while (v>1){
+				v = Math.floor(v/2);
+				p = p+1;
+			}
+			return p
+		}
+		````
