MAJ JS02 + build

--- a/docs/NSI/Premiere/C03/JS02.md
+++ b/docs/NSI/Premiere/C03/JS02.md
@@ -1,6 +1,7 @@
 # Javascript et la manipulation du DOM
 
-Cette partie de cours consistera uniquement en une série de vidéo. Vous devrez faire les manipulations proposées en parallèle de vos visionnagess de ces vidéos.
+Cette partie de cours consistera uniquement en une série de vidéo. Vous devrez faire les manipulations proposées en parallèle de vos visionnagess de ces vidéos. Les différents fichiers sont disponibles au téléchargement [ici](https://fvergniaud-drive.mytoutatice.cloud/public?sharecode=qG15RRHa6coR).
+
 
 ## Ajouter des objets au DOM en Javascript
 
